Add data processing controller and thymeleaf html files